<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    tools:context=".CreateVaccinationChart" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewCreate"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:contentDescription="@drawable/vaccination_1"
            android:src="@drawable/vaccination_1" />

        <TextView
            android:id="@+id/TextAddVaccinationChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="#08385B"
            android:gravity="center"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/createVaccinationChart"

            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:padding="18dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewDailyDietChartFeast"
                    android:layout_width="34dp"
                    android:layout_height="42dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@drawable/vaccination_1"
                    android:src="@drawable/vaccination_1" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:id="@+id/spinnerVaccinationName" />

                <!--<EditText-->
                    <!--android:id="@+id/etVaccinationName"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="5dp"-->
                    <!--android:layout_weight="2"-->
                    <!--android:ems="10"-->
                    <!--android:hint="@string/myVaccinationName"-->
                    <!--android:inputType="text" >-->
                <!--</EditText>-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewDailyDietChartMenu"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@drawable/vaccination_2"
                    android:src="@drawable/vaccination_2" />

                <EditText
                    android:id="@+id/editVaccinationDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/mVaccinationDetails"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewDP"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@drawable/date"
                    android:src="@drawable/date" />

                <EditText
                    android:id="@+id/editTextDP"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:calendarViewShown="true"
                    android:hint="@string/dateOfVaccination"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageTimeDailyDietChart"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@drawable/time"
                    android:src="@drawable/time" />

                <EditText
                    android:id="@+id/etVaccinationTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:hint="@string/timeOfVaccination"
                    android:inputType="time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/vaccination_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/alarm"
                    android:text="@string/alarm"
                    android:textColor="#0052A3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9CBED7"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/save"
        android:onClick="createProfile"
        android:padding="10dp"/>
</LinearLayout>